cabal-version:   3.0
name:            monad-logger-effectful
version:         1.0
author:          Jack Kelly
maintainer:
  Jack Kelly <jack@jackkelly.name>, Zelin Feng <contact@zelinf.net>

copyright:       Copyright (c) 2023-2025 Jack Kelly
license:         BSD-3-Clause
build-type:      Simple
category:        Control
extra-doc-files: README.md
tested-with:     GHC ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2
synopsis:        effectful support for monad-logger
description:
  This package provides integration between the @effectful@ library and
  @monad-logger@, enabling structured logging within the effectful effects
  system.
  .
  The package defines a @Logger@ effect that can be used with the effectful
  library, along with orphan instances for @MonadLogger@ and @MonadLoggerIO@
  that allow existing monad-logger code to work seamlessly with effectful
  computations.

source-repository head
  type:     git
  location: https://github.com/kokobd/haskell.git

common opts
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Werror=incomplete-patterns
    -Wredundant-constraints -Wpartial-fields -Wtabs
    -Wmissing-local-signatures -fhelpful-errors
    -fprint-expanded-synonyms -fwarn-unused-do-bind

library
  import:          opts
  ghc-options:     -Wunused-packages
  hs-source-dirs:  src
  exposed-modules: Effectful.MonadLogger
  build-depends:
    , base            >=4.18   && <4.22
    , effectful-core  >=2.5    && <2.7
    , effectful-th    >=1.0    && <1.1
    , monad-logger    >=0.3.39 && <0.4
    , stm             >=2.5    && <2.6
    , stm-chans       >=3.0    && <3.1

test-suite spec
  import:             opts
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  other-modules:      Effectful.MonadLoggerTest
  ghc-options:        -threaded
  build-tool-depends: tasty-discover:tasty-discover ^>=5.1
  build-depends:
    , base                    >=4.18 && <4.22
    , effectful-core          >=2.5  && <2.7
    , monad-logger-effectful
    , tasty                   >=1.5  && <1.6
    , tasty-hunit             >=0.10 && <0.11
